[package]
name = "transfer-shard"
version = "0.1.0"
authors = ["Julian Meyer <julianmeyer2000@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
phore = { path = "../phore" }
wee_alloc = { version = "0.4.4" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
hex-literal = { version = "0.2.1" }
